# interview-projects

./: .gitignore  tests.cpp
median-cpp/: .gitignore  CMakeLists.txt  README.md  app.cpp  median.cpp  median.hpp
median-d/: README.md  dub.sdl
median-d/source/: app.d  median.d
median-d/tests/: tests.d
nearestpoints-cpp/: CMakeLists.txt  README.md  app.cpp  point.cpp  point.hpp  tests.cpp
nearestpoints-d/: .gitignore  README.md  dub.json  dub.sdl
nearestpoints-d/source/: app.d  impl.d  util.d
nearestpoints-d/tests/: main.d  tests.d
